Fix textarea white space

--- a/negev-talent/React/quicknotes/src/styles/note.css
+++ b/negev-talent/React/quicknotes/src/styles/note.css
@@ -15,6 +15,7 @@
     text-align: left;
     word-wrap: break-word;
     margin-top: 5px;
+    white-space: pre-wrap;
 }
 
 .title {
